# app/Http/Requests/Product/StoreRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\Http\Requests\Category;
+namespace App\Http\Requests\Product;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class UpdateRequest extends FormRequest
+class StoreRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -23,7 +23,8 @@ class UpdateRequest extends FormRequest
     {
         return [
             'name' => 'required|string',
-            'parent_id' => 'required|integer',
+            'category_id' => 'required|integer',
+            'is_active' => 'required|boolean',
         ];
     }
 }
