# app/Models/Product.php
@@ -2,9 +2,33 @@
 
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Notifications\Notifiable;
 
 class Product extends Model
 {
-    //
+    use HasFactory, Notifiable;
+    protected $fillable = [
+        'name',
+        'category_id',
+        'is_active'
+    ];
+    protected $guarded = false;
+
+    protected $hidden = [
+        'created_at',
+        'updated_at',
+        'deleted_at',
+    ];
+
+    public function category(): BelongsTo
+    {
+        return $this->belongsTo(Category::class);
+    }
+    public function get_properties()
+    {
+        $this->props = 'fffewfewfe';
+    }
 }
