# routes/v1/api.php
@@ -9,3 +9,5 @@ Route::get('/user', function (Request $request) {
 
 Route::resource('types', App\Http\Controllers\TypeController::class);
 Route::resource('categories', App\Http\Controllers\CategoryController::class);
+Route::resource('products', App\Http\Controllers\ProductController::class);
+Route::resource('properties', App\Http\Controllers\PropertyController::class);
